[metadata]
name = horus-oag-sdk
description = Horus OAG SDK
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
author = Juan Carlos
author_email = whoami0jc@gmail.com
url = https://github.com/whoami-jc/Non-Blocking-Http-logging-Handler

[options]
zip_safe = True
include_package_data = True
packages = find:
