[metadata]
name = Non-Blocking-Http-Logging-Handler
description = Python logging handler that sends log records to a HTTP server in a non-blocking way.
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
author = Juan Carlos
author_email = whoami0jc@gmail.com
url = https://github.com/whoami-jc/non-blocking-http-logging-handler

[options]
zip_safe = True
include_package_data = True
packages = find:
